Thu Dec  4 20:30:40 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.h:
        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Made InfoRepo shutdown compatible with TAO ImR.
          The ImR can be commanded to shut down the ORB which will
          not run any of the InfoRepo's usual pre-ORB::shutdown() code.

Thu Dec  4 16:37:51 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Fixed locking order in transport_assoc_done to respect the
          established order of sample_lock_ before writers_lock_.

Thu Dec 04 07:02:40 UTC 2014  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
        * dds/InfoRepo/DCPSInfoRepoServ.h:

          Added regular running of dispatching orb in info repo to handle
          any pending connection cleanup.

Wed Dec  3 14:04:04 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * configure

          updated for mavericks

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/TransportClient.cpp:

          reverting code changes from svn commit 6630 leaving
          additional debug logging in place.

Tue Dec  2 21:40:08 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:

          Added method to detect whether link currently has any publications
          or subscriptions registered with it to determine if link is defunct
          and can be released.

        * dds/DCPS/transport/framework/TransportClient.cpp:

          Added check to see if link is defunct before removing the link due
          to asynchronous ability to reuse a datalink and add a pub or sub
          to an existing link after release has begun.
